# sos

./: .current_sprint  .gitignore  .pre-commit-config.yaml  AGENT_TEMPLATE.md  CHANGELOG.md  CONTRIBUTING.md  E2E_SPRINT_004.md  FOUNDING.md  MAP.md  Makefile  PRODUCT_PRINCIPLES.md  README.md  RETRO_SPRINT_003_004.md  ROADMAP.md  SALES.md  SECURITY.md  SOVEREIGN_MEMORY.md  SPRINT-001.md  SPRINT-002.md  SPRINT-003.md  SPRINT-004.md  SPRINT-005.md  SPRINT-006.md  breakables.yaml  docker-compose.yml  install.sh  organ_daemon.py  pyproject.toml  requirements.txt
.archive/sos-services-dispatcher/: ARCHIVED.md  __init__.py  app.py  rate_limit.py
.claude/agents/: sos-brain-wire.md  sos-connectivity-medic.md  sos-contract-tester.md  sos-openapi-author.md  sos-pydantic-author.md  sos-schema-author.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-deploy.yml  ci.yml  claude.yml  deploy.yml
.sprint_markers/: 007.close.json  008.close.json  012.close.json  claim_ttl_reclaim_task-2ab8fa99_2026-04-25T22-34-13.json  claim_ttl_reclaim_task-966cf713_2026-04-25T22-34-32.json  gate_verdict_G51_2026-04-25T21-30-34.json  gate_verdict_G55_2026-04-25T23-10-54.json  gate_verdict_G63_2026-04-25T20-13-48.json  gate_verdict_G64_narrow_2026-04-25T21-20-00.json  gate_verdict_G65_2026-04-25T20-25-06.json  gate_verdict_G65_2026-04-25T20-32-36.json  gate_verdict_G68_2026-04-25T21-00-00.json  gate_verdict_G70_2026-04-25T21-50-19.json  gate_verdict_G71_2026-04-25T22-03-42.json  internal_knight_minted_agent_gavin-knight_2026-04-26T02-40-06.json  internal_knight_minted_agent_gavin-knight_2026-04-26T02-41-53.json  internal_knight_minted_agent_gavin-knight_2026-04-26T02-43-57.json  internal_knight_minted_agent_gavin-knight_2026-04-26T03-10-31.json  internal_knight_minted_agent_gavin-knight_2026-04-26T04-40-55.json  internal_knight_minted_agent_gavin-knight_2026-04-26T04-45-20.json  internal_knight_minted_agent_gavin-knight_2026-04-26T04-50-07.json  internal_knight_minted_agent_lex-knight_2026-04-26T03-10-32.json  internal_knight_minted_agent_noor-knight_2026-04-26T03-10-33.json  internal_knight_minted_agent_pricila-knight_2026-04-26T03-10-34.json  knight_minted_agent_acme-e3-knight_2026-04-25T23-54-36.json  knight_minted_agent_s007-test-knight_2026-04-26T01-42-25.json  leader_election_default_2026-04-25T21-39-06.json  leader_election_default_2026-04-25T21-39-41.json  leader_election_default_2026-04-25T21-40-12.json  leader_election_default_2026-04-25T21-40-45.json  leader_election_default_2026-04-25T21-41-16.json  leader_election_default_2026-04-25T21-41-51.json  leader_election_default_2026-04-25T21-42-24.json  leader_election_default_2026-04-25T21-43-03.json  leader_election_default_2026-04-25T21-43-35.json  leader_election_default_2026-04-25T21-44-08.json  leader_election_default_2026-04-25T21-44-44.json  leader_election_default_2026-04-25T21-45-19.json  leader_election_default_2026-04-25T21-45-53.json  leader_election_default_2026-04-25T21-46-26.json  (+21240 more)
.sprint_markers/ingested/: adversarial_finding_F-01_2026-04-25T15-00-46.json  adversarial_finding_F-02_2026-04-25T15-00-47.json  adversarial_finding_F-05_2026-04-25T15-00-48.json  adversarial_finding_F-10_2026-04-25T15-00-49.json  adversarial_finding_F-11_2026-04-25T15-00-50.json  adversarial_finding_F-15_2026-04-25T15-00-52.json  adversarial_finding_F-17_2026-04-25T15-00-53.json  gate_verdict_G13_2026-04-25T14-55-07.json  gate_verdict_G14_2026-04-25T14-55-07.json  gate_verdict_G15_2026-04-25T14-55-08.json  gate_verdict_G16_2026-04-25T14-55-09.json  gate_verdict_G16a_2026-04-25T14-55-10.json  gate_verdict_G17_2026-04-25T14-55-12.json  gate_verdict_G17b_2026-04-25T14-43-17.json  gate_verdict_G17b_2026-04-25T14-55-13.json  gate_verdict_G18_2026-04-25T14-55-14.json  sprint-002.close.json  (+16 more)
athena/: SOUL.md
docker/: Dockerfile.agent  Dockerfile.service
docs/: AGENT-BUS-HOOK.md  AGENT_TEMPLATE.md  ARCHITECTURE.md  SOVEREIGN_MEMORY.md  SUBAGENT-BRIEF.md  TECH-RADAR.md  WHITEPAPER.md  docusaurus.config.ts  sidebars.ts  sos-method.md  squad-task-workflow-runtime.md
examples/: demo_ai_to_ai_commerce.py
migrations/: 0003_shelf.sql
operations/: content-writer.yaml  intake-schema.yaml  mumega-marketing.yaml  project-scaffold.md  seo-analyst.yaml  seo-optimizer.yaml  social-media-manager.yaml
organs/: README.md
personas/: aether.yml  default.yml  digid_coo.yml  ellie.yml  kasra.yml  river.yml
scripts/: create_agent.py  demo_ai_to_ai_commerce.py  deploy-seed.py  export_port_schemas.py  gen_ts_types.sh  ingest_frc.py  install-brain-service.sh  install-hooks.sh  kasra_onboard.py  knight-claude-template.md  load-test-dispatcher.py  loom-pipeline-status.py  migrate-db.sh  migrate-token-hashes.py  mint-internal-knight.py  mirror_refresh.py  onboard_athena.py  onboard_claude_final.py  organ_daemon.py  organism.sh  seed_records.py  sos-provision-agent-identity.py  sync-tokens-to-kv.py  tenant-setup.sh
sos/: __init__.py  main.py
sovereign/: CHANGELOG.md  README.md  __init__.py  bank.py  bounty_board.py  brain.py  compute_registry.py  config.py  cortex.py  cortex_events.py  factory_watchdog.py  genetics.py  goals.py  hive_evolution.py  loop.py  message.py  model_config.py  registry.py  squad_activate.py  squad_router.py  squad_scheduler.py  squad_state.py  treasury.py  trust.py
systemd/: sos-registry.service
tests/: final_trace.py  test_bus.py  test_bus_envelope.py  test_council_worker.py  test_customer_intake.py  test_customer_onboarding_e2e.py  test_dispatch_guardrails.py  test_e2e_signup.py  test_fmaap.py  test_harness.py  test_identity.py  test_kernel_telemetry.py  test_lifecycle_contract.py  test_mcp_cloudflare_auth.py  test_mesh_enroll_e2e.py  test_pairing_endpoint.py  test_policy_governance.py  test_project_sessions.py  test_saas_api.py  test_squad_auto_route.py  test_squad_done_when_gate.py  test_squad_runtime.py  test_squad_tasks_board.py  test_task_budget_enforcement.py  test_task_project_filter.py  test_task_workflow_runtime.py  test_tenant_isolation.py  test_worker_teardown.py
tools/: audit-plaintext-secrets.py
(+1014 files in other folders)
