[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumega"
version = "0.3.0"
description = "Sovereign Operating System for AI Agents - Multi-model, autonomous, edge-native"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Mumega Collective", email = "hello@mumega.com" }]
keywords = ["ai", "agents", "llm", "autonomous", "sovereign", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100",
    "httpx>=0.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "redis>=4.0",
    "requests>=2.31",
    "sse-starlette>=2.1.3",
    "uvicorn>=0.20",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
# Core LLM providers
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.0.0"]
all-llms = ["google-genai>=1.0.0", "openai>=1.0.0"]

# Storage backends
cloudflare = ["httpx>=0.24"]
local = ["chromadb>=0.4", "sentence-transformers>=2.2"]

# Economy/blockchain
solana = ["solana>=0.30.2", "solders>=0.18.0", "base58>=2.1.1"]

# Full install
full = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "solana>=0.30.2",
    "solders>=0.18.0",
    "base58>=2.1.1",
    "prometheus-client>=0.17",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "import-linter>=2.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://mumega.com"
Documentation = "https://docs.mumega.com"
Repository = "https://github.com/servathadi/sos"
Issues = "https://github.com/servathadi/sos/issues"

[project.scripts]
# Main CLI
mumega = "sos.cli:main"

# Service runners
mumega-engine = "sos.services.engine.__main__:main"
mumega-memory = "sos.services.memory.__main__:main"
mumega-economy = "sos.services.economy.__main__:main"
mumega-tools = "sos.services.tools.__main__:main"
mumega-autonomy = "sos.services.autonomy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sos*"]

[tool.setuptools.package-data]
sos = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "sos/tests"]
markers = [
    "integration: live-service integration tests — requires Redis + Mirror + bus consumer (opt-in only)",
]

[tool.importlinter]
root_packages = ["sos", "tests"]

[[tool.importlinter.contracts]]
name = "R5 - deprecated is walled off"
type = "forbidden"
source_modules = ["sos"]
forbidden_modules = ["sos.deprecated"]

[[tool.importlinter.contracts]]
name = "R6 - contract tests don't import services"
type = "forbidden"
source_modules = ["tests.contracts"]
forbidden_modules = ["sos.services"]

[[tool.importlinter.contracts]]
name = "R2 - clients/adapters/cli/agents don't import service internals"
type = "forbidden"
source_modules = ["sos.clients", "sos.adapters", "sos.cli", "sos.agents", "sos.mcp"]
forbidden_modules = ["sos.services"]
# Only flag direct imports from the listed sources. Indirect chains
# through kernel/* are the kernel's problem (kernel must not reach into
# services) and surface in a separate R0 contract when we add one.
allow_indirect_imports = "true"
# Stale ignores (package not yet discoverable) tolerate silently — the
# shrinking list is the source of truth.
unmatched_ignore_imports_alerting = "none"
ignore_imports = [
  # Known v0.4.6–v0.4.8 targets. Each line is a pre-existing violation
  # that a later sprint fixes. Empty list when structural cleanup completes.
  # P1-06 cli.onboard — saas models/registry move to client/contracts
  "sos.cli.onboard -> sos.services.saas.registry",
  "sos.cli.onboard -> sos.services.saas.models",
  # project.scripts dispatcher — cli/__init__.py routes to service __main__
  # entrypoints. Legitimate packaging pattern; v0.5 splits cli out.
  "sos.cli -> sos.services.autonomy.__main__",
  "sos.cli -> sos.services.engine.__main__",
  "sos.cli -> sos.services.memory.__main__",
  # P1-02 adapters.router
  "sos.adapters.router -> sos.services.economy.wallet",
  # Kernel governance has a lazy import into economy.metabolism for
  # budget enforcement (Gap 7). v0.5 flips to HTTP/contracts.
  "sos.adapters.telegram -> sos.services.economy.metabolism",
  # P1-04 agents/shabrang
  "sos.agents.shabrang.agent -> sos.services.engine.core",
  # P1-05 agents.join
  "sos.agents.join -> sos.services.squad.auth",
  "sos.agents.join -> sos.services.journeys.tracker",
  # P1-07 clients.operations — should POST to runner, not import
  "sos.clients.operations -> sos.services.operations.runner",
  # P1-01 MCP gateway reaches into service internals — rewrite as
  # thin HTTP proxy via clients/* is its own sprint.
  "sos.mcp.sos_mcp_sse -> sos.services.squad.**",
  "sos.mcp.sos_mcp_sse -> sos.services.saas.**",
  "sos.mcp.sos_mcp_sse -> sos.services.billing.**",
  "sos.mcp.sos_mcp_sse -> sos.services.integrations.**",
]

[[tool.importlinter.contracts]]
# R1 expressed as "independence": every top-level service package is a
# sibling that may not import any other sibling. Intra-service imports
# (same service talking to itself) are allowed by construction.
name = "R1 - services don't import other services"
type = "independence"
modules = [
  "sos.services.analytics",
  "sos.services.auth_gateway",
  "sos.services.autonomy",
  "sos.services.billing",
  "sos.services.brain",
  "sos.services.bus",
  "sos.services.content",
  "sos.services.dashboard",
  "sos.services.economy",
  "sos.services.engine",
  "sos.services.feedback",
  "sos.services.gateway",
  "sos.services.ghl",
  "sos.services.health",
  "sos.services.identity",
  "sos.services.integrations",
  "sos.services.journeys",
  "sos.services.memory",
  "sos.services.operations",
  "sos.services.outreach",
  "sos.services.registry",
  "sos.services.saas",
  "sos.services.squad",
  "sos.services.tools",
  "sos.services.voice",
]
# Stale ignores tolerate silently — the shrinking list is the source of truth.
unmatched_ignore_imports_alerting = "none"
ignore_imports = [
  # Known P0 violations — v0.4.5 closes each via bus events or HTTP.
  # P0-01 billing.webhook → saas
  "sos.services.billing.** -> sos.services.saas.**",
  "sos.services.billing.** -> sos.services.economy.**",
  # P0-02 closed in v0.4.5 wave 7 — engine.core used redundant in-proc
  # ToolsCore alongside ToolsClient; removed and routed through HTTP client.
  # P0-04, P0-05 closed in v0.4.5 wave 1 — squad emits task.completed;
  # health + journeys subscribe via their own bus consumers. Ignores removed.
  # P0-07 closed in v0.4.5 wave 4 — autonomy calls identity via
  # sos.clients.identity; UV16D moved to sos.contracts.identity. Ignores removed.
  # P0-09 closed in v0.4.5 wave 5 — brain calls registry via
  # sos.clients.registry over HTTP. Stale brain→saas ignore removed too.
  # P0-10 + P0-11 closed in v0.4.5 wave 8 — conductance (G matrix) moved
  # from sos.services.health.calcifer to sos.kernel.conductance; feedback
  # and journeys now import from kernel. calcifer re-exports for BC.
  # P1-10 theme: services.bus.discovery is shared infra pending kernel move
  "sos.services.engine.** -> sos.services.bus.**",
  "sos.services.memory.** -> sos.services.bus.**",
  "sos.services.integrations.** -> sos.services.bus.**",
  "sos.services.registry.** -> sos.services.bus.**",
]
